@@ -1,3 +1,9 @@
+2005-05-11 Kenneth Zadeck <zadeck@naturalbridge.com>
+
+	* bitmap.c (bitmap_elmt_to_freelist, bitmap_element_allocate,
+	bitmap_elt_clear_from, bitmap_clear): Changed freelist structure.
+	* bitmap.h: Fixed comments.
+
 2005-05-11  Richard Henderson  <rth@redhat.com>
 
 	PR target/21412
